--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <py-script > 
-        import js, json, plotly
+<!--         import js, json, plotly
         #import plotly.express as px
         import plotly.graph_objects as go
         
@@ -24,7 +24,7 @@
         fig = go.Figure(data=go.Scatter(x=[1,2, 3], y=[1, 2, 3]))
         fig.data[0].on_click(select_params)
         graphJSON = json.dumps(fig, cls=plotly.utils.PlotlyJSONEncoder)
-        plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))
+        plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON)) -->
 <!--       import js, json, plotly
       import plotly.graph_objects as go
       import pandas as pd
