--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <py-script > 
-<!--         import js, json, plotly
-        #import plotly.express as px
+        import js, json, plotly
+<!--         #import plotly.express as px
         import plotly.graph_objects as go
         
         def select_params(trace, points, selector):
