--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <body>
     <py-script > 
         import js, json, plotly
-<!--         #import plotly.express as px
         import plotly.graph_objects as go
         
-        def select_params(trace, points, selector):
+<!--         def select_params(trace, points, selector):
             display('Hello, World!', target="helloDiv")
         
         def display_hello():
