--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         import pandas as pd
         df = pd.read_csv("https://gist.githubusercontent.com/awanshrestha/6481638c175e82dc6a91a499a8730057/raw/1791ef1f55f0be268479286284a0452129371003/TSMC.csv")
         df = df.set_index(pd.DatetimeIndex(df['Date']))
-<!--         figure = go.Figure(
+        figure = go.Figure(
             data = [
                 go.Candlestick(
                     x = df.index,
@@ -26,9 +26,8 @@
                 )
                 ]
         )
-        figure.show()
         graphJSON = json.dumps(figure, cls=plotly.utils.PlotlyJSONEncoder)
-        plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))  -->
+        plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON)) 
     </py-script>
   </body>
 </html>
