--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 )
                 ]
         )
-        graphJSON = json.dumps(figure, cls=plotly.utils.PlotlyJSONEncoder)
-        plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON)) 
+        js.plot(figure.to_json(), "chart1")
+<!--         graphJSON = json.dumps(figure, cls=plotly.utils.PlotlyJSONEncoder)
+        plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))  -->
     </py-script>
   </body>
 </html>
