--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 )
                 ]
         )
-        figure
+        figure.show()
 <!--         js.plot(figure.to_json(), "chart1") -->
 <!--         graphJSON = json.dumps(figure, cls=plotly.utils.PlotlyJSONEncoder)
         plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))  -->
