--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   </head>
   <body>
-    <div id="plot">
+    <div id="plot">  </div>
     <py-script output="plot"> 
         import js, json, plotly
         import plotly.graph_objects as go
@@ -32,6 +32,5 @@
 <!--         graphJSON = json.dumps(figure, cls=plotly.utils.PlotlyJSONEncoder)
         plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))  -->
     </py-script>
-    </div>
   </body>
 </html>
