--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     # from event handlers
                     display('hello', target="helloDiv")
 
-                #fig = px.line(x=[1,2, 3], y=[1, 2, 3]) 
+                fig = px.line(x=[1,2, 3], y=[1, 2, 3]) 
                 fig = go.Figure(data=go.Scatter(x=[1,2, 3], y=[1, 2, 3]))
 <!--                 df = pd.read_csv("https://gist.githubusercontent.com/awanshrestha/6481638c175e82dc6a91a499a8730057/raw/1791ef1f55f0be268479286284a0452129371003/TSMC.csv")
                 df = df.set_index(pd.DatetimeIndex(df['Date']))
