--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!--         figure.show() -->
             <!--         js.plot(figure.to_json(), "chart1") -->
             <!--         graphJSON = json.dumps(figure, cls=plotly.utils.PlotlyJSONEncoder)
-                    plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))  -->
+                    plot = js.Plotly.newPlot("chart1", js.JSON.parse(graphJSON))  
                 </py-script>
       <py-tutor>
   </body>
