--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <py-script>
                 import js, json, plotly
                 import plotly.graph_objects as go
+                import pandas as pd
+
+                df = pd.read_csv("https://gist.githubusercontent.com/awanshrestha/6481638c175e82dc6a91a499a8730057/raw/1791ef1f55f0be268479286284a0452129371003/TSMC.csv")
+                df = df.set_index(pd.DatetimeIndex(df['Date']))
 
         
                 fig = go.Figure(data=go.Scatter(x=[1,2, 3], y=[1, 2, 3]))
