--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 import plotly.graph_objects as go
                 import pandas as pd
 
-                df = pd.read_csv("./data.csv")
+                df = pd.read_csv("data.csv")
                 df = df.set_index(pd.DatetimeIndex(df['Date']))
 
 
