--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         plugins = [
                               "https://pyscript.net/latest/plugins/python/py_tutor.py"
                             ]
-        paths : 
-            ./data.csv
+        - paths:
+          - /data.csv
     </py-config>
 </head>
 <body>
