--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         plugins = [
                               "https://pyscript.net/latest/plugins/python/py_tutor.py"
                             ]
+    </py-config>
+    <py-env>
         - paths:
           - /data.csv
-    </py-config>
+    </py-env>
 </head>
 <body>
     <div id="chart1"></div>
