--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
         plugins = [
                               "https://pyscript.net/latest/plugins/python/py_tutor.py"
                             ]
+        src = "https://github.com/aayushipatel135/CandelStick1/blob/main/data.csv"
     </py-config>
-    <py-env>
-        - paths:
-          - /data.csv
-    </py-env>
 </head>
 <body>
     <div id="chart1"></div>
