--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
     <py-config>
         packages = ['plotly','numpy','pandas']
-        plugins = [
-                              "https://pyscript.net/latest/plugins/python/py_tutor.py"
-                            ]
+        plugins = ["https://pyscript.net/latest/plugins/python/py_tutor.py"]
         src = "https://github.com/aayushipatel135/CandelStick1/blob/main/data.csv"
     </py-config>
 </head>
