--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </py-config>
 </head>
 <body>
-    <div id="chart1" style="height:100"></div>
+    <div id="chart1" style="height:100px"></div>
     <py-script>
                 import js, json, plotly
                 import plotly.graph_objects as go
