--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
                 layout = go.Layout(
                     autosize=False,
+                    width=100,
                     height=100,
                 
                     xaxis= go.layout.XAxis(linecolor = 'black',
