--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     margin=dict(l=30,r=30,b=30,
                                 t=30,pad=3
                                 ),
-                    paper_bgcolor="LightSteelBlue",
+                    paper_bgcolor="white",
                 )
  
 
